# web-monitoring

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: config.example.yaml
src/web_monitor/: checker.py  config.py  database.py  main.py  models.py  notifier.py
systemd/: web-monitor.service
tests/: conftest.py  test_checker.py  test_database.py  test_monitor.py  test_notifier.py
